[add] SSE header, should be activated when using with intel processors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,7 @@ include_directories(${INCLUDE_UNITS})
 set(${PROJECT_NAME}_INCLUDE_DIRS 
     ${PROJECT_SOURCE_DIR}/include
     CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
+
+set(${PROJECT_NAME}_INCLUDE_UNITS
+    ${INCLUDE_UNITS}
+    CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
